--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -30,11 +30,9 @@
 
 .navigationContainer {
     position: absolute;
-    left: 50%;
-    top: 5%;
-    /* width: 50%;
-    padding-top: 50%; */
-    transform: translate(-50%, -50%);
+    top: 10pt;
+    left: 50%;  
+    transform: translate(-50%, 0%);
 }
 
 .name {
